# Heuclid

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Heuclid.cmake.in  README.md  README_zh.md
.github/workflows/: ci.yml
cmake/: Config.cmake.in  HeuclidConfig.cmake
doc/: Doxyfile.extra.in  Doxyfile.in
include/Heuclid/euclid/interfaces/: ZeroTestEpsilon.h
include/Heuclid/euclid/orientation/: Orientation2D.h
include/Heuclid/euclid/tools/: HeuclidCoreTool.h  QuaternionTool.h
include/Heuclid/euclid/tuple2D/: Point2D.h  UnitVector2D.h  Vector2D.h
include/Heuclid/euclid/tuple3D/: Point3D.h  UnitVector3D.h  Vector3D.h
include/Heuclid/euclid/tuple4D/: Quaternion.h
include/Heuclid/geometry/: ConvexHull2D.h  ConvexPolygon2D.h  Line2D.h  Pose2D.h  Pose3D.h
include/Heuclid/geometry/curves/: Func.h
include/Heuclid/geometry/tools/: HeuclidGeometryTools.h  HeuclidPolygonTools.h
include/Heuclid/title/: Title.h
scripts/: add_license_headers.py
src/Heuclid/euclid/orientation/: Orientation2D.cpp
src/Heuclid/euclid/tools/: HeuclidCoreTool.cpp
src/Heuclid/geometry/: ConvexPolygon2D.cpp  Line2D.cpp
src/Heuclid/geometry/tools/: HeuclidGeometryTools.cpp  HeuclidPolygonTools.cpp
src/Test/: CMakeLists.txt  TestBeizer.cpp  TestConvexHull2D.cpp  TestPolygonPredicate.cpp  test.cpp
src/Test/Foot/: FootPolygon.cpp  FootPolygon.h
